--- a/codes/Makefile.config
+++ b/codes/Makefile.config
@@ -3,7 +3,7 @@ CFLAGS := -O3 -pthread -D_POSIX_C_SOURCE=200112
 #CFLAGS := -g3 -pthread -D_POSIX_C_SOURCE=200112
 CFLAGS := $(CFLAGS) -Wall -W -Wmissing-prototypes -Wmissing-declarations -Wredundant-decls -Wdisabled-optimization
 CFLAGS := $(CFLAGS) -Wpadded -Winline -Wpointer-arith -Wsign-compare -Wendif-labels
-LDFLAGS := -lm
+LDFLAGS := -lm -static
 
 BASEDIR := $(HOME)/Projects/splash2/codes
 MACROS := $(BASEDIR)/null_macros/c.m4.null.POSIX_BARRIER
